# IntelligenteAgentenTestat

./: LICENSE
ueb1/news_agent/: de.falsei.ueb1news.json  meson.build
ueb1/news_agent/data/: de.falsei.ueb1news.appdata.xml.in  de.falsei.ueb1news.desktop.in  de.falsei.ueb1news.gschema.xml  meson.build  news_agent.in
ueb1/news_agent/data/ui/: article_page.ui  custom.css  main_window.ui  meson.build  news_agent.gresource.xml  news_category_list_box_row.ui  news_page.ui  news_topline_list_box_row.ui  status_page.ui
ueb1/news_agent/po/: POTFILES  meson.build
ueb1/news_agent/src/: application.py  main_window.py  meson.build  news_api.py
ueb1/wetter_agent/: de.falsei.ueb1wetter.json  meson.build
ueb1/wetter_agent/data/: de.falsei.ueb1wetter.appdata.xml.in  de.falsei.ueb1wetter.desktop.in  de.falsei.ueb1wetter.gschema.xml  meson.build  wetter_agent.in
ueb1/wetter_agent/data/icons/: meson.build
ueb1/wetter_agent/data/ui/: custom.css  main_window.ui  meson.build  status_page.ui  weather_page.ui  wetter_agent.gresource.xml
ueb1/wetter_agent/po/: POTFILES  meson.build
ueb1/wetter_agent/src/: application.py  main_window.py  meson.build  weather_api.py
